--- a/PWA1-January2015/PWA1-Solo_Work/day 1/goal1_basics/index.html
+++ b/PWA1-January2015/PWA1-Solo_Work/day 1/goal1_basics/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Goal 1: Review of WPF</title>
+    <script src="Js/script.js"></script>
 </head>
+
 <body>
     <div id="container">
         <h1>PWA1 / Goal 1: Review of WPF</h1>
